<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName_IL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@id/sign_up_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName_IL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@id/firstName_IL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_IL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/lastName_IL"
        android:hint="@string/email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_IL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email_IL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:elevation="@dimen/cardview_default_elevation"
        android:paddingLeft="60dp"
        android:paddingTop="5dp"
        android:paddingRight="60dp"
        android:paddingBottom="5dp"
        android:text="@string/sign_up_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/signIn_btn"
        app:layout_constraintEnd_toEndOf="@id/password_IL"
        app:layout_constraintStart_toStartOf="@id/password_IL"
        app:layout_constraintTop_toBottomOf="@id/password_IL" />





</androidx.constraintlayout.widget.ConstraintLayout>