<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    android:layout_margin="15dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstnameIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:hint="@string/firstname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstnameEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:hint="@string/lastname"
            android:layout_below="@id/firstnameIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastnameET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:hint="@string/email"
            android:layout_below="@id/lastnameIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:hint="@string/password"
            android:layout_below="@id/emailIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>