<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        android:id="@+id/log_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_IL_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/log_in_tv"
        android:hint="@string/email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_ET_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_IL_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email_IL_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ET_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/signIn_btn"
        android:layout_marginTop="50dp"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/password_IL_login"
        app:layout_constraintEnd_toEndOf="@id/password_IL_login"
        app:layout_constraintStart_toStartOf="@id/password_IL_login"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_in_btn"
        android:elevation="@dimen/cardview_default_elevation"/>

</androidx.constraintlayout.widget.ConstraintLayout>